update paywall JS, remove old analytics, add data layer for analytics hub

--- a/root/project.json
+++ b/root/project.json
@@ -11,7 +11,9 @@
   },
   "title": "",
   "description": "",
+  "author": "",
   "url": "",
+  "post_id": 0,
   "image": "assets/social.jpg",
   "sheets": [],
   "standout": false,
