add task for loading google docs; change sheets task to use the same google API setup

--- a/root/project.json
+++ b/root/project.json
@@ -16,6 +16,7 @@
   "post_id": 0,
   "image": "assets/social.jpg",
   "sheets": [],
+  "docs": [],
   "standout": false,
   "embedded": true,
   "production": false
