--- a/root/package.json
+++ b/root/package.json
@@ -21,7 +21,7 @@
     "csv": "^0.4.2",
     "dot": "^1.1.2",
     "exorcist": "^0.4.0",
-    "google-spreadsheets": "^0.5.1",
+    "googleapis": "^45.0.0",
     "grunt": "^1.0.0",
     "grunt-contrib-connect": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
