--- a/root/package.json
+++ b/root/package.json
@@ -17,7 +17,7 @@
     "browserify": "^13.0.0",
     "chalk": "^1.0.0",
     "commonmark": "^0.24.0",
-    "component-responsive-frame": "^1.0.6",
+    "component-responsive-frame": "~1.4.1",
     "csv": "^5.3.0",
     "dot": "^1.1.2",
     "exorcist": "^0.4.0",
