--- a/root/package.json
+++ b/root/package.json
@@ -9,17 +9,17 @@
   },
   "dependencies": {
     "archieml": "^0.4.2",
-    "async": "^2.0.0-rc.1",
+    "async": "^2.6.3",
     "aws-sdk": "^2.2.45",
     "babel-preset-env": "^1.6.0",
     "babelify": "^7.3.0",
     "browser-pack-flat": "^3.0.5",
     "browserify": "^13.0.0",
-    "chalk": "^1.0.0",
+    "chalk": "^4.1.0",
     "commonmark": "^0.24.0",
-    "component-responsive-frame": "~1.4.1",
-    "csv": "^5.3.0",
-    "dot": "^1.1.2",
+    "component-responsive-frame": "^1.4.2",
+    "csv": "^5.5.0",
+    "dot": "^1.1.3",
     "exorcist": "^0.4.0",
     "googleapis": "^45.0.0",
     "grunt": "^1.0.0",
@@ -27,7 +27,7 @@
     "grunt-contrib-watch": "^1.0.0",
     "less": "^2.6.1",
     "mime": "^1.2.11",
-    "resolve": "^1.1.7",
+    "resolve": "^1.2.0",
     "shelljs": "^0.6.0",
     "through2": "^2.0.0",
     "typogr": "^0.6.4"
