--- a/root/package.json
+++ b/root/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/{%= github_repo %}.git"
   },
   "dependencies": {
+    "@nprapps/sidechain": "^1.1.4",
     "archieml": "^0.4.2",
     "async": "^2.6.3",
     "aws-sdk": "^2.897.0",
@@ -17,7 +18,6 @@
     "browserify": "^13.0.0",
     "chalk": "^4.1.0",
     "commonmark": "^0.24.0",
-    "component-responsive-frame": "^1.4.2",
     "csv": "^5.5.0",
     "dot": "^1.1.3",
     "exorcist": "^0.4.0",
