--- a/root/package.json
+++ b/root/package.json
@@ -8,28 +8,32 @@
     "url": "https://github.com/{%= github_repo %}.git"
   },
   "dependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.14.2",
     "@nprapps/sidechain": "^1.1.4",
-    "archieml": "^0.4.2",
-    "async": "^2.6.3",
-    "aws-sdk": "^2.897.0",
-    "babel-preset-env": "^1.6.0",
-    "babelify": "^7.3.0",
+    "archieml": "^0.5.0",
+    "async": "^2.0.0-rc.1",
+    "aws-sdk": "^2.2.45",
+    "babelify": "^10.0.0",
     "browser-pack-flat": "^3.0.5",
-    "browserify": "^13.0.0",
-    "chalk": "^4.1.0",
+    "browserify": "^16.2.3",
+    "chalk": "^2.4.2",
     "commonmark": "^0.24.0",
-    "csv": "^5.5.0",
-    "dot": "^1.1.3",
-    "exorcist": "^0.4.0",
-    "googleapis": "^50.0.0",
-    "grunt": "^1.0.0",
-    "grunt-contrib-connect": "^1.0.0",
+    "csv": "^5.1.1",
+    "dot": "^1.1.2",
+    "enter-view": "^2.0.1",
+    "exorcist": "^1.0.1",
+    "googleapis": "^84.0.0",
+    "grunt": "^1.0.4",
+    "grunt-contrib-connect": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
-    "less": "^3.1.1",
-    "mime": "^1.2.11",
-    "resolve": "^1.2.0",
-    "shelljs": "^0.6.0",
-    "through2": "^2.0.0",
+    "less": "^3.9.0",
+    "mime": "^2.4.2",
+    "opn": "^5.4.0",
+    "request": "^2.88.2",
+    "resolve": "^1.1.7",
+    "shelljs": "^0.8.3",
+    "through2": "^3.0.1",
     "typogr": "^0.6.4"
   },
   "browser": {
