--- a/root/package.json
+++ b/root/package.json
@@ -8,12 +8,16 @@
     "url": "https://github.com/{%= github_repo %}.git"
   },
   "dependencies": {
+   "@aws-sdk/client-s3": "^3.81.0",
     "@babel/core": "^7.4.3",
     "@babel/preset-env": "^7.14.2",
     "@nprapps/sidechain": "^1.1.4",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-node-resolve": "^13.2.1",
+    "@rollup/plugin-terser": "^0.4.4",
     "archieml": "^0.5.0",
     "async": "^2.0.0-rc.1",
-    "aws-sdk": "^2.2.45",
     "babelify": "^10.0.0",
     "browser-pack-flat": "^3.0.5",
     "browserify": "^16.2.3",
@@ -25,13 +29,14 @@
     "exorcist": "^1.0.1",
     "googleapis": "^84.0.0",
     "grunt": "^1.0.4",
-    "grunt-contrib-connect": "^5.0.1",
+    "grunt-contrib-connect": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "less": "^3.9.0",
     "mime": "^2.4.2",
     "opn": "^5.4.0",
     "request": "^2.88.2",
     "resolve": "^1.1.7",
+    "rollup": "^2.70.2",
     "shelljs": "^0.8.3",
     "through2": "^3.0.1",
     "typogr": "^0.6.4"
